--- a/index.html
+++ b/index.html
@@ -4,23 +4,105 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sports TV</title>
+
 <style>
-body{margin:0;font-family:tahoma;background:#0b0b0b;color:#fff}
-#lockScreen{position:fixed;inset:0;background:#080808;display:flex;justify-content:center;align-items:center;z-index:9999}
-.lock-box{background:#121212;padding:25px;width:280px;border-radius:14px;text-align:center}
-.lock-box input,button{width:100%;height:42px;border:none;border-radius:10px;margin-top:10px}
-button{background:#c90000;color:#fff;font-weight:bold}
-#error{color:#ff4d4d;display:none}
+body{
+  margin:0;
+  font-family:tahoma;
+  background:#0b0b0b;
+  color:#fff;
+}
+
+/* شاشة القفل */
+#lockScreen{
+  position:fixed;
+  inset:0;
+  background:#080808;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
+}
+.lock-box{
+  background:#121212;
+  padding:25px;
+  width:280px;
+  border-radius:14px;
+  text-align:center;
+}
+.lock-box input,button{
+  width:100%;
+  height:42px;
+  border:none;
+  border-radius:10px;
+  margin-top:10px;
+}
+button{
+  background:#c90000;
+  color:#fff;
+  font-weight:bold;
+}
+#error{
+  color:#ff4d4d;
+  display:none;
+}
+
+/* المحتوى */
 #content{display:none}
 
-.top-header{background:#111;padding:14px 10px;text-align:center;border-bottom:2px solid #b30000}
-.title{font-size:22px;font-weight:bold;color:#fff;margin-bottom:8px;text-shadow:0 0 6px #b30000}
-.visits-box{display:inline-block;background:#000;color:#00ff66;padding:8px 18px;border-radius:12px;font-size:15px;font-weight:bold;box-shadow:0 0 10px rgba(0,255,100,.3)}
-iframe{width:100%;height:85vh;border:none;margin-top:10px}
+/* الهيدر */
+.top-header{
+  background:#111;
+  padding:14px 10px;
+  text-align:center;
+  border-bottom:2px solid #b30000;
+}
+.title{
+  font-size:22px;
+  font-weight:bold;
+  color:#fff;
+  margin-bottom:8px;
+  text-shadow:0 0 6px #b30000;
+}
+.visits-box{
+  display:inline-block;
+  background:#000;
+  color:#00ff66;
+  padding:8px 18px;
+  border-radius:12px;
+  font-size:15px;
+  font-weight:bold;
+  box-shadow:0 0 10px rgba(0,255,100,.3);
+}
+
+/* iframe + تغطية koora live */
+.iframe-wrapper{
+  position:relative;
+  width:100%;
+  height:85vh;
+  overflow:hidden;
+}
+.iframe-cover{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:80px;
+  background:#0b0b0b;
+  z-index:10;
+  pointer-events:none; /* ده اللي خلى البث قابل للتكبير */
+}
+iframe{
+  width:100%;
+  height:100%;
+  border:none;
+}
 </style>
 </head>
+
 <body>
 
+<!-- شاشة القفل -->
 <div id="lockScreen">
   <div class="lock-box">
     <h3>🔒 أدخل كود الدخول</h3>
@@ -30,6 +112,7 @@ iframe{width:100%;height:85vh;border:none;margin-top:10px}
   </div>
 </div>
 
+<!-- المحتوى -->
 <div id="content">
   <div class="top-header">
     <div class="title">Sports TV</div>
@@ -38,9 +121,13 @@ iframe{width:100%;height:85vh;border:none;margin-top:10px}
     </div>
   </div>
 
-  <iframe src="https://www.fullmatch-hd.com/"></iframe>
+  <div class="iframe-wrapper">
+    <div class="iframe-cover"></div>
+    <iframe src="https://www.fullmatch-hd.com/" allowfullscreen></iframe>
+  </div>
 </div>
 
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
@@ -94,7 +181,9 @@ function logout(){
   document.getElementById("error").style.display="block";
 }
 
-function showError(){ document.getElementById("error").style.display="block"; }
+function showError(){
+  document.getElementById("error").style.display="block";
+}
 </script>
 
 </body>
