--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@ body{
   background:#0b0b0b;
   color:#fff;
 }
-
-/* شاشة القفل */
 #lockScreen{
   position:fixed;
   inset:0;
@@ -42,82 +40,63 @@ button{
   color:#fff;
   font-weight:bold;
 }
-#error{
-  color:#ff4d4d;
-  display:none;
-}
-
-/* المحتوى */
+#error{color:#ff4d4d;display:none}
 #content{display:none}
 
-/* الهيدر */
 .top-header{
   background:#111;
-  padding:14px 10px;
+  padding:14px;
   text-align:center;
   border-bottom:2px solid #b30000;
 }
 .title{
   font-size:22px;
   font-weight:bold;
-  color:#fff;
-  margin-bottom:8px;
   text-shadow:0 0 6px #b30000;
 }
 .visits-box{
-  display:inline-block;
+  margin-top:8px;
   background:#000;
-  color:#00ff66;
-  padding:8px 18px;
+  padding:10px;
   border-radius:12px;
-  font-size:15px;
+  color:#00ff66;
   font-weight:bold;
-  box-shadow:0 0 10px rgba(0,255,100,.3);
 }
 
-/* iframe + تغطية koora live */
 .iframe-wrapper{
   position:relative;
-  width:100%;
   height:85vh;
-  overflow:hidden;
 }
 .iframe-cover{
   position:absolute;
-  top:0;
-  left:0;
+  top:0;left:0;
   width:100%;
   height:80px;
   background:#0b0b0b;
   z-index:10;
-  pointer-events:none; /* ده اللي خلى البث قابل للتكبير */
+  pointer-events:none;
 }
-iframe{
-  width:100%;
-  height:100%;
-  border:none;
-}
+iframe{width:100%;height:100%;border:none}
 </style>
 </head>
 
 <body>
 
-<!-- شاشة القفل -->
 <div id="lockScreen">
   <div class="lock-box">
     <h3>🔒 أدخل كود الدخول</h3>
     <input id="lockCode" placeholder="الكود">
     <button onclick="unlock()">دخول</button>
-    <div id="error">الكود غير صالح</div>
+    <div id="error">تم إيقاف أو حذف الكود</div>
   </div>
 </div>
 
-<!-- المحتوى -->
 <div id="content">
   <div class="top-header">
     <div class="title">Sports TV</div>
     <div class="visits-box">
-      عدد الزيارات المتبقية: <span id="visitsCount">5</span>
+      👤 <span id="userName">---</span><br>
+      عدد الزيارات: <span id="visitsCount">0</span>
     </div>
   </div>
 
@@ -127,7 +106,6 @@ iframe{
   </div>
 </div>
 
-<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
@@ -141,8 +119,10 @@ const firebaseConfig = {
   messagingSenderId: "49183098248",
   appId: "1:49183098248:web:37e3fb16744042a1bb263d"
 };
+
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
+const presenceRef = firebase.database().ref(".info/connected");
 
 let currentCode = "";
 
@@ -151,16 +131,26 @@ function unlock(){
   if(!code) return;
 
   db.ref("codes/"+code).get().then(snap=>{
-    if(!snap.exists()){ showError(); return; }
+    if(!snap.exists()){showError();return;}
     const data = snap.val();
-    if(!data.active || data.visits <= 0){ showError(); return; }
+    if(!data.active || data.visits<=0){showError();return;}
 
     currentCode = code;
-    db.ref("codes/"+code+"/visits").set(data.visits - 1);
+    db.ref("codes/"+code+"/visits").set(data.visits-1);
 
-    document.getElementById("visitsCount").innerText = data.visits - 1;
+    document.getElementById("userName").innerText = data.name;
+    document.getElementById("visitsCount").innerText = data.visits-1;
+
     document.getElementById("lockScreen").style.display="none";
     document.getElementById("content").style.display="block";
+
+    const onlineRef = db.ref("codes/"+code+"/online");
+    presenceRef.on("value",s=>{
+      if(s.val()===true){
+        onlineRef.set(true);
+        onlineRef.onDisconnect().set(false);
+      }
+    });
 
     watchStatus();
   });
@@ -168,14 +158,18 @@ function unlock(){
 
 function watchStatus(){
   db.ref("codes/"+currentCode).on("value", snap=>{
-    if(!snap.exists()){ logout(); return; }
-    const data = snap.val();
-    if(!data.active || data.visits <= 0){ logout(); return; }
-    document.getElementById("visitsCount").innerText = data.visits;
+    if(!snap.exists() || !snap.val().active || snap.val().visits<=0){
+      logout();
+      return;
+    }
+    document.getElementById("visitsCount").innerText = snap.val().visits;
   });
 }
 
 function logout(){
+  if(currentCode){
+    db.ref("codes/"+currentCode+"/online").set(false);
+  }
   document.getElementById("content").style.display="none";
   document.getElementById("lockScreen").style.display="flex";
   document.getElementById("error").style.display="block";
