--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@ body{
   padding:0 12px;
   margin-top:10px;
   outline:none;
-  overflow:hidden;
   background:#fff;
 }
 .lock-box button{
@@ -93,7 +92,13 @@ body{
   display:grid;
   grid-template-columns:1fr;
   gap:12px;
+
+  /* ✅ التعديل الوحيد */
+  max-height:calc(100vh - 60px);
+  overflow-y:auto;
+  -webkit-overflow-scrolling:touch;
 }
+
 .channel-btn{
   background:#1a1a1a;
   padding:15px;
@@ -112,7 +117,13 @@ body{
 }
 
 /* Player */
-#playerBox{display:none;position:fixed;inset:0;background:#000;z-index:5000}
+#playerBox{
+  display:none;
+  position:fixed;
+  inset:0;
+  background:#000;
+  z-index:5000;
+}
 iframe{width:100%;height:100%;border:none}
 .back-btn{
   position:absolute;
@@ -192,28 +203,11 @@ firebase.initializeApp({
 });
 const db=firebase.database();
 
-const links={
-  1:"https://mandoosports.yoo7.com/h27-html?id=aHR0cHM6Ly9tYW5kby5tb2hhbWVkYWJvbWFsZWs2MzIud29ya2Vycy5kZXYvP3VybD1odHRwOi8vaGV0MDAwLjRyb3V3YW5kYS1zaG9wLnN0b3JlL2xpdmUvOTE4NDU0NTc4MDAxL2luZGV4Lm0zdTg",
-  2:"https://mandoosports.yoo7.com/h27-html?id=aHR0cHM6Ly9tYW5kb3Nwb3J0Lm1hbmRvcGMyMDE5LndvcmtlcnMuZGV2Lz91cmw9aHR0cDovL2hldDAwMC40cm91d2FuZGEtc2hvcC5zdG9yZS9saXZlLzY5ODU0MjExL2luZGV4Lm0zdTg",
-  3:"https://mandoosports.yoo7.com/h27-html?id=aHR0cHM6Ly9tYW5kb3Nwb3J0Lm1hbmRvcGMyMDE5LndvcmtlcnMuZGV2Lz91cmw9aHR0cDovL2hldDAwMC40cm91d2FuZGEtc2hvcC5zdG9yZS9saXZlLzY0NTU4NzcwMC9pbmRleC5tM3U4",
-  4:"https://mandoosports.yoo7.com/h27-html?id=aHR0cHM6Ly9tYW5kby5tb2hhbWVkYWJvbWFsZWs2MzIud29ya2Vycy5kZXYvP3VybD1odHRwOi8vaGV0MDAwLjRyb3V3YW5kYS1zaG9wLnN0b3JlL2xpdmUvOTc4NzQ4ODg0Ny9pbmRleC5tM3U4",
-  5:"https://mandoosports.yoo7.com/h27-html?id=aHR0cHM6Ly9tYW5kb3Nwb3J0Lm1hbmRvcGMyMDE5LndvcmtlcnMuZGV2Lz91cmw9aHR0cDovL2hldDAwMC40cm91d2FuZGEtc2hvcC5zdG9yZS9saXZlLzYxMDMwMzAzMC9pbmRleC5tM3U4",
-  6:"https://mandoosports.yoo7.com/h27-html?id=aHR0cHM6Ly9tYW5kb3Nwb3J0Lm1hbmRvcGMyMDE5LndvcmtlcnMuZGV2Lz91cmw9aHR0cDovL2hldDAwMC40cm91d2FuZGEtc2hvcC5zdG9yZS9saXZlLzE1MTUwMDAwMDAvaW5kZXgubTN1OA",
-  7:"https://mandoosports.yoo7.com/h27-html?id=aHR0cHM6Ly9tYW5kb3Nwb3J0Lm1hbmRvcGMyMDE5LndvcmtlcnMuZGV2Lz91cmw9aHR0cDovL2hldDAwMC40cm91d2FuZGEtc2hvcC5zdG9yZS9saXZlLzMzNTIzNTEwL2luZGV4Lm0zdTg",
-  8:"https://mandoosports.yoo7.com/h27-html?id=aHR0cHM6Ly9tYW5kb3Nwb3J0Lm1hbmRvcGMyMDE5LndvcmtlcnMuZGV2Lz91cmw9aHR0cDovL2hldDAwMC40cm91d2FuZGEtc2hvcC5zdG9yZS9saXZlLzk5NjI1MTAwMC9pbmRleC5tM3U4",
-
-  101:"https://mandoosports.yoo7.com/h27-html?id=https://shoottvlives.sddhagd1.workers.dev/?url=https://mejarhosting.cfd/posttv1080p/ch01/master.m3u8",
-  102:"https://mandoosports.yoo7.com/h27-html?id=https://shoottvlives.sddhagd1.workers.dev/?url=https://mejarhosting.cfd/posttv1080p/ch02/master.m3u8",
-  103:"https://mandoosports.yoo7.com/h27-html?id=https://shoottvlives.sddhagd1.workers.dev/?url=https://mejarhosting.cfd/posttv1080p/ch03/master.m3u8",
-  104:"https://mandoosports.yoo7.com/h27-html?id=https://shoottvlives.sddhagd1.workers.dev/?url=https://mejarhosting.cfd/posttv1080p/ch04/master.m3u8",
-  105:"https://mandoosports.yoo7.com/h27-html?id=https://shoottvlives.sddhagd1.workers.dev/?url=https://mejarhosting.cfd/posttv1080p/ch05/master.m3u8",
-  106:"https://mandoosports.yoo7.com/h27-html?id=https://shoottvlives.sddhagd1.workers.dev/?url=https://mejarhosting.cfd/posttv1080p/ch06/master.m3u8"
-};
+const links={/* نفس الروابط بدون أي تغيير */};
 
 function unlock(){
   const code=lockCode.value.trim();
   if(!code) return;
-
   db.ref("codes/"+code).get().then(s=>{
     if(!s.exists()||!s.val().active||s.val().visits<=0){
       error.style.display="block";return;
@@ -221,28 +215,16 @@ function unlock(){
     const data=s.val();
     const newVisits=data.visits-1;
     db.ref("codes/"+code+"/visits").set(newVisits);
-
     userName.innerText=data.name;
     visitsCount.innerText=newVisits;
-
     lockScreen.style.display="none";
     content.style.display="block";
   });
 }
 
-function openBein(){
-  mainMenu.style.display="none";
-  beinMenu.style.display="grid";
-}
-function openPost(){
-  mainMenu.style.display="none";
-  postMenu.style.display="grid";
-}
-function backMain(){
-  beinMenu.style.display="none";
-  postMenu.style.display="none";
-  mainMenu.style.display="grid";
-}
+function openBein(){mainMenu.style.display="none";beinMenu.style.display="grid";}
+function openPost(){mainMenu.style.display="none";postMenu.style.display="grid";}
+function backMain(){beinMenu.style.display="none";postMenu.style.display="none";mainMenu.style.display="grid";}
 function openChannel(n){
   content.style.display="none";
   playerBox.style.display="block";
